scripts/nullaway/nullgtn/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8.txt
../nullgtn/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/Main.java:157: error: [NullAway] @NonNull field Main$LoggingEvents.lastState not initialized
        private BoardState lastState;
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/board/FixedCell.java:50: error: [NullAway] parameter fixedCell is @NonNull, but parameter in superclass method dbathon.nurikabe.board.Cell.setFixedCell(dbathon.nurikabe.board.FixedCell) is @Nullable
    public void setFixedCell(FixedCell fixedCell) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/board/SimpleCell.java:61: error: [NullAway] method returns @Nullable, but superclass method dbathon.nurikabe.board.Cell.getFixedCell() returns @NonNull
    public FixedCell getFixedCell() {
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/board/SimpleCell.java:66: error: [NullAway] parameter fixedCell is @NonNull, but parameter in superclass method dbathon.nurikabe.board.Cell.setFixedCell(dbathon.nurikabe.board.FixedCell) is @Nullable
    public void setFixedCell(FixedCell fixedCell) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:64: error: [NullAway] enhanced-for expression inAllIslands is @Nullable
                for (final Cell cell : inAllIslands) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:71: error: [NullAway] dereferenced expression reachableMap.get(cell) is @Nullable
                    reachableMap.get(cell).add(fixedCell);
                                          ^
    (see http://t.uber.com/nullaway )
6 errors
